--- a/manifest.json
+++ b/manifest.json
@@ -4,18 +4,32 @@
   "short_name": "BOcT",
   "description": "Meet the BOcT",
   "start_url": "/",
-  "background_color": "#20B2AA",
-  "theme_color": "#E64C63",        
   "orientation": "any",
-  "display": "standalone",
+  "background_color": "#20B2AA",
+  "theme_color": "#E64C63",
   "icons": [
-      {
-          "src": "boctstyle/icons/robot512.png",
-          "sizes": "512x512"
-      },
-      {
-        "src":"boctstyle/icons/robot128.png",
-        "sizes":"128x128"
-      }
+    {
+      "src": "/boctstyle/icons/robot512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    },
+    {
+      "src": "/boctstyle/icons/robot128.png",
+      "sizes": "128x128",
+      "type": "image/png"
+    },
+    {
+      "src": "/boctstyle/icons/Maskrobot.png",
+      "sizes": "853x853",
+      "type": "image/png",
+      "purpose": "maskable"
+    }
+  ],
+  "display": "standalone",
+  "features": [
+    "Scripted Intelligence",
+    "Unit Converter",
+    "PWA",
+    "Open-Source"
   ]
 }
