--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "the-boct",
-  "version": "3.3.0",
+  "version": "3.3.0a",
   "license": "MIT",
+  "homepage": "https://the-boct.github.io/",
   "scripts": {
     "start": "snowpack dev",
-    "build": "snowpack build"
+    "build": "snowpack build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "snowpack": "^2.18.5"
   }
 }
