--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-boct",
-  "version": "3.3.0a",
+  "version": "3.3.1",
   "license": "MIT",
   "homepage": "https://the-boct.github.io/",
   "scripts": {
@@ -10,6 +10,9 @@
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
-    "snowpack": "^2.18.5"
+    "snowpack": "^3.0.10"
+  },
+  "prettier": {
+    "printWidth": 200
   }
 }
