--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "the-boct",
-  "version": "3.4.1",
-  "license": "MIT",
-  "homepage": "https://the-boct.github.io/",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "deploy": "gh-pages -d build"
+    "test": "web-test-runner \"src/**/*.test.tsx\"",
+    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx}\"",
+    "lint": "prettier --check \"src/**/*.{js,jsx,ts,tsx}\""
+  },
+  "dependencies": {
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0",
-    "snowpack": "^3.0.10"
-  },
-  "prettier": {
-    "printWidth": 220
+    "@snowpack/plugin-dotenv": "^2.0.5",
+    "@snowpack/plugin-react-refresh": "^2.4.0",
+    "@snowpack/plugin-typescript": "^1.2.1",
+    "@snowpack/web-test-runner-plugin": "^0.2.1",
+    "@testing-library/react": "^11.2.3",
+    "@types/chai": "^4.2.14",
+    "@types/mocha": "^8.2.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/snowpack-env": "^2.3.3",
+    "@web/test-runner": "^0.12.4",
+    "chai": "^4.2.0",
+    "prettier": "^2.2.1",
+    "snowpack": "^3.0.11",
+    "typescript": "^4.1.3"
   }
 }
