--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
 {
+  "name": "the-boct",
+  "version": "4.0.0-alpha-1",
+  "license": "MIT",
+  "homepage": "https://the-boct.github.io/",
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
@@ -14,17 +18,15 @@
     "@snowpack/plugin-dotenv": "^2.0.5",
     "@snowpack/plugin-react-refresh": "^2.4.0",
     "@snowpack/plugin-typescript": "^1.2.1",
-    "@snowpack/web-test-runner-plugin": "^0.2.1",
     "@testing-library/react": "^11.2.3",
-    "@types/chai": "^4.2.14",
-    "@types/mocha": "^8.2.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/snowpack-env": "^2.3.3",
-    "@web/test-runner": "^0.12.4",
-    "chai": "^4.2.0",
-    "prettier": "^2.2.1",
     "snowpack": "^3.0.11",
     "typescript": "^4.1.3"
+  },
+  "prettier": {
+    "trailingComma": "all",
+    "printWidth": 220
   }
 }
