v4-alpha-6 - Now, can render a div for the input in the chat

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     "noEmit": true,
     "jsx": "react-jsx",
     "allowJs": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "removeComments": true
   },
   "include": ["src"]
 }
