--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-boct",
-  "version": "4.0.2",
+  "version": "4.1.0-alpha-0",
   "homepage": "https://the-boct.github.io/",
   "author": {
     "name": "U-C-S",
