--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-boct",
-  "version": "4.1.0-alpha-0",
+  "version": "4.1.0-alpha-0.1",
   "homepage": "https://the-boct.github.io/",
   "author": {
     "name": "U-C-S",
@@ -14,26 +14,13 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@testing-library/react": "^11.2.5",
-    "@types/node": "^12.20.4",
-    "@types/react": "^17.0.2",
+    "@types/node": "^14.14.37",
+    "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
-    "workbox-background-sync": "^5.1.4",
-    "workbox-broadcast-update": "^5.1.4",
-    "workbox-cacheable-response": "^5.1.4",
-    "workbox-core": "^5.1.4",
-    "workbox-expiration": "^5.1.4",
-    "workbox-google-analytics": "^5.1.4",
-    "workbox-navigation-preload": "^5.1.4",
-    "workbox-precaching": "^5.1.4",
-    "workbox-range-requests": "^5.1.4",
-    "workbox-routing": "^5.1.4",
-    "workbox-strategies": "^5.1.4",
-    "workbox-streams": "^5.1.4"
+    "typescript": "^4.2.3"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0"
