--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "the-boct",
-  "version": "4.1.0-alpha-0.2",
+  "version": "4.1.0-alpha-1",
   "homepage": "https://the-boct.github.io/",
   "author": {
     "name": "U-C-S",
@@ -14,16 +14,17 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
+  },
+  "devDependencies": {
     "@types/node": "^15.0.1",
     "@types/react": "^17.0.4",
     "@types/react-dom": "^17.0.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "gh-pages": "^3.1.0",
+    "sass": "^1.32.12",
     "typescript": "^4.2.4"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
